fix text overflow

--- a/src/styles/notes.css
+++ b/src/styles/notes.css
@@ -1,4 +1,6 @@
-
+p {
+    word-wrap: break-word;
+}
 
 .notes {
     display: flex;
